Remove current price from PortfolioStock, add exceptions